[tool.poetry]
name = "leetcode-practice"
version = "0.1.0"
description = ""
authors = ["vikas1595 <vikasptlo7@gmail.com>"]
readme = "README.md"
packages = [{include = "leetcode_practice"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
